# logue

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  package.json  tsconfig.json
apps/ai/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
apps/ai/config/: __init__.py  model_config.py  settings.py
apps/ai/core/: errors.py  exception_handlers.py  llm_client.py  prompts.py  rules.py  validators.py
apps/ai/docs/: test_cases.md
apps/ai/llm/: __init__.py  client.py  prompt_loader.py  retry.py  structured_outputs.py
apps/ai/observability/: __init__.py  cost.py  hashing.py  logger.py  redaction.py
apps/ai/prompts/: file_analysis_v1.system.md  question_analysis_v1.system.md  result_summary_v1.system.md
apps/ai/routers/: __init__.py  analysis_criteria.py  analysis_summary.py  column.py  file_analysis.py  question_analysis.py  result_summary.py
apps/ai/rules/: __init__.py  business_validation.py  column_rules.py  metric_rules.py  warning_rules.py
apps/ai/schemas/: __init__.py  analysis_criteria.py  analysis_summary.py  common.py  enums.py  file_analysis.py  question_analysis.py  result_summary.py
apps/ai/services/: __init__.py  analysis_criteria_service.py  analysis_summary.py  column_ai.py  file_analysis.py  file_analysis_service.py  llm_output_validator.py  question_analysis.py  question_analysis_service.py  result_summary.py  result_summary_service.py
apps/ai/tests/: conftest.py  test_analysis.py  test_analysis_criteria_resolve.py  test_analysis_summary.py  test_business_validation.py  (+3 more)
(+335 files in other folders)
