[project]
name = "logue-ai"
version = "0.1.0"
description = "Logue AI - 자연어 질문 해석, 분석 조건 구조화, 결과 요약 서비스"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.30.0",
    "tenacity>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
